# sed_vis

./: README.md  environment.yaml  pyproject.toml  sed_vis.py  sed_vis.py~  sed_vis_v1.backup.py
.github/workflows/: python-package-conda.yml
EXAMPLE/: filters_standard.westphal.v2
EXAMPLE/filters/: B_subaru.bp  Bw.bp  Bw_kpno.bp  Bwkp.bp  G.bp  G_cfht.bp  G_decam.bp  G_lris.bp  G_subaru.bp  H.bp  H1.bp  H1_newfirm.bp  H2.bp  H2_newfirm.bp  H_isaac.bp  H_moircs.bp  H_ukidss.bp  H_uvista.bp  H_wircam.bp  I_cfht.bp  I_decam.bp  I_kpno.bp  I_resp.bp  I_subaru.bp  Ikp.bp  J1_newfirm.bp  J2.bp  J2_newfirm.bp  J3.bp  J3_newfirm.bp  J_isaac.bp  J_moircs.bp  J_ukidss.bp  J_uvista.bp  J_wircam.bp  K_newfirm.bp  K_ukidss.bp  K_uvista.bp  Ks_isaac.bp  Ks_moircs.bp  (+108 more)
src/: sed_vis.py
tests/: conftest.py  test_sfh_decode.py
