[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "sed_vis"
version = "0.0.1"
description = "Plot SED fits from Naveen Reddy's fitting software"
authors = [
  { name = "Anthony J. Pahl" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lyc_tigm"]
force-sort-within-sections = true